# mdsl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
mdsl/: CMakeLists.txt  Config.cmake.in
mdsl/include/: mdsl.h
mdsl/include/mdsl/codegen/: BinaryWriter.h  BytecodeEmitter.h  CppEmitter.h  IRWriter.h  TemplateEngine.h
mdsl/include/mdsl/core/: Diagnostic.h  MemoryArena.h  Result.h  SourceLocation.h  StringPool.h
mdsl/include/mdsl/ir/: IRBuilder.h  IRInstruction.h  IRModule.h  IRPass.h
mdsl/include/mdsl/lexer/: ILexer.h  Lexer.h  Token.h
mdsl/include/mdsl/parser/: ASTNode.h  Combinators.h  Grammar.h  IParser.h  RecursiveDescent.h  TokenStream.h
mdsl/include/mdsl/semantic/: SemanticAnalyzer.h  SymbolTable.h  Type.h
mdsl/include/mdsl/util/: Debug.h  FileIO.h  StringUtil.h
mdsl/src/codegen/: BytecodeEmitter.cpp
mdsl/src/core/: Diagnostic.cpp  StringPool.cpp
mdsl/src/ir/: IRModule.cpp
mdsl/src/lexer/: Lexer.cpp
mdsl/src/parser/: ASTNode.cpp
mdsl/src/semantic/: SymbolTable.cpp
mdsl/src/util/: FileIO.cpp
tests/: CMakeLists.txt  README.md  test_combinators.cpp
